# mergepdfs

./: .gitignore  README.md  pyproject.toml
mergepdfs/: README.md
mergepdfs/mergepdfs_package/: merge.py
mergepdfs_package/: __init__.py  main.py  merge.py  split.py
